--- a/src/components/portfolio/pages/Page.module.css
+++ b/src/components/portfolio/pages/Page.module.css
@@ -53,10 +53,3 @@
     position: relative;
   }
 }
-
-@media screen and (max-width: 700px) {
-  .title,
-  .home-title {
-    padding: 6% 1% 2%;
-  }
-}
